# cinebaianos-api

./: .env.example  .gitignore  README.MD  pom.xml  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
src/: config.py  main.py
src/auth/: auth.py
src/di/: connection_factory.py  maintenance_factory.py  refresh_token_repository.py  repository_factory.py  schemas_factory.py
src/domain/repositories/: auth_repository.py  genres_repository.py  maintenance_repository.py  movies_repository.py  schemas_repository.py  users_repository.py  votes_repository.py
src/exception/: column_not_found_error.py  invalid_vote_error.py  movie_details_fetch_error.py  movie_details_not_found_error.py  spread_sheet_error.py  user_voter_not_found_error.py  vote_registration_error.py
src/infra/postgres/: auth_repository_postgres.py  genres_repository_postgres.py  maintenance_repository_postgres.py  movies_repository_posgtres.py  postgres_connection_provider.py  schema_repository_postgres.py  users_repository_postgres.py  votes_repository_postgres.py
src/infra/sheets/: sheets.py
src/models/: filme.py  movie.py  movie_detail.py  user.py  vote.py  vote_type.py
src/routes/: auth_routes.py  genres_routes.py  movies_routes.py  rankings_routes.py  sync_routes.py  tmdb_routes.py  users_routes.py  votes_routes.py
src/services/: auth_service.py  genres_service.py  movies_service.py  rankings_service.py  sheet_service.py  sync_service.py  tmdb_service.py  users_service.py  votes_service.py
src/util/: auth_utils.py  exception_util.py
(+327 files in other folders)
